@@ -46,11 +46,11 @@ $result = restrictedArea($user, 'cheque', $id, 'bordereau_cheque','','',$fieldid
 
 $mesg='';
 
-$sortfield=isset($_GET["sortfield"])?$_GET["sortfield"]:$_POST["sortfield"];
-$sortorder=isset($_GET["sortorder"])?$_GET["sortorder"]:$_POST["sortorder"];
+$sortfield=GETPOST("sortfield");
+$sortorder=GETPOST("sortorder");
 $page=$_GET["page"];
 if (! $sortorder) $sortorder="ASC";
-if (! $sortfield) $sortfield="b.emetteur";
+if (! $sortfield) $sortfield="b.dateo,b.rowid";
 if ($page < 0) { $page = 0 ; }
 $limit = $conf->liste_limit;
 $offset = $limit * $page ;
@@ -309,15 +309,15 @@ if ($action == 'new')
     print '<tr><td>'.$langs->trans("BankAccount").'</td><td>';
     print $html->select_comptes($filteraccountid,'accountid',0,'courant <> 2',1);
     print '</td></tr>';
-	print '<tr><td colspan="2" align="center">';
+	print '</table>';
+    print '<center>';
 	print '<input type="submit" class="button" name="filter" value="'.dol_escape_htmltag($langs->trans("ToFilter")).'">';
     if ($filterdate || $filteraccountid > 0)
     {
     	print ' &nbsp; ';
     	print '<input type="submit" class="button" name="removefilter" value="'.dol_escape_htmltag($langs->trans("RemoveFilter")).'">';
     }
-	print '</td></tr>';
-	print '</table>';
+	print '</center>';
     //print '</fieldset>';
 	print '</form>';
 	print '<br>';
@@ -522,12 +522,12 @@ else
 		$param="&amp;id=".$remisecheque->id;
 		print '<tr class="liste_titre">';
 		print_liste_field_titre($langs->trans("Cheque"),'','','','','width="30"');
+		print_liste_field_titre($langs->trans("DateChequeReceived"),$_SERVER["PHP_SELF"],"b.dateo,b.rowid", "",$param,'align="center"',$sortfield,$sortorder);
 		print_liste_field_titre($langs->trans("Numero"),$_SERVER["PHP_SELF"],"b.num_chq", "",$param,'align="center"',$sortfield,$sortorder);
 		print_liste_field_titre($langs->trans("CheckTransmitter"),$_SERVER["PHP_SELF"],"b.emetteur", "",$param,"",$sortfield,$sortorder);
 		print_liste_field_titre($langs->trans("Bank"),$_SERVER["PHP_SELF"],"b.banque", "",$param,"",$sortfield,$sortorder);
 		print_liste_field_titre($langs->trans("Amount"),$_SERVER["PHP_SELF"],"b.amount", "",$param,'align="right"',$sortfield,$sortorder);
 		print_liste_field_titre($langs->trans("LineRecord"),$_SERVER["PHP_SELF"],"b.rowid", "",$param,'align="center"',$sortfield,$sortorder);
-		print_liste_field_titre($langs->trans("DateChequeReceived"),$_SERVER["PHP_SELF"],"b.dateo", "",$param,'align="center"',$sortfield,$sortorder);
 		print_liste_field_titre('','','');
 		print "</tr>\n";
 		$i=1;
@@ -539,6 +539,7 @@ else
 
 			print "<tr $bc[$var]>";
 			print '<td align="center">'.$i.'</td>';
+			print '<td align="center">'.dol_print_date($db->jdate($objp->date),'day').'</td>';	// Date operation
 			print '<td align="center">'.($objp->num_chq?$objp->num_chq:'&nbsp;').'</td>';
 			print '<td>'.dol_trunc($objp->emetteur,24).'</td>';
 			print '<td>'.dol_trunc($objp->banque,24).'</td>';
@@ -554,7 +555,6 @@ else
 				print '&nbsp;';
 			}
 			print '</td>';
-			print '<td align="center">'.dol_print_date($db->jdate($objp->date),'day').'</td>';
 			if($remisecheque->statut == 0)
 			{
 				print '<td align="right"><a href="'.$_SERVER["PHP_SELF"].'?id='.$remisecheque->id.'&amp;action=remove&amp;lineid='.$objp->rowid.'">'.img_delete().'</a></td>';
@@ -593,12 +593,12 @@ if ($user->societe_id == 0 && count($accounts) == 1 && $action == 'new' && $user
 
 if ($user->societe_id == 0 && $remisecheque->statut == 0 && $remisecheque->id && $user->rights->banque->cheque)
 {
-	print '<a class="butAction" href="'.$_SERVER["PHP_SELF"].'?id='.$remisecheque->id.'&amp;action=valide">'.$langs->trans('Valid').'</a>';
+	print '<a class="butAction" href="'.$_SERVER["PHP_SELF"].'?id='.$remisecheque->id.'&amp;action=valide&amp;sortfield='.$sortfield.'&amp;sortorder='.$sortorder.'">'.$langs->trans('Valid').'</a>';
 }
 
 if ($user->societe_id == 0 && $remisecheque->id && $user->rights->banque->cheque)
 {
-	print '<a class="butActionDelete" href="'.$_SERVER["PHP_SELF"].'?id='.$remisecheque->id.'&amp;action=delete">'.$langs->trans('Delete').'</a>';
+	print '<a class="butActionDelete" href="'.$_SERVER["PHP_SELF"].'?id='.$remisecheque->id.'&amp;action=delete&amp;sortfield='.$sortfield.'&amp;sortorder='.$sortorder.'">'.$langs->trans('Delete').'</a>';
 
 }
 print '</div>';
